--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta name="google-site-verification" content="2APIqr1XaPSdtopQ5MXIrhEtvPrubgEQsl6uUanjmo4" />
 <title> home decor halloween ideas </title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 </head>
 <body>
 <h1 style="font-size:50px; text-align:center;">7 Home decor halloween ideas 2024</h1>
